syntax = "proto3";

package v1;

import "api/v1/empty.proto";
import weak "google/api/annotations.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";

message FeatureFlag {
  string name = 1;
  string env_var = 2;
  bool enabled = 3;
}

message GetFeatureFlagsResponse {
  repeated FeatureFlag feature_flags = 1;
}

// FeatureFlagService retrieves information about feature flags.
service FeatureFlagService {
  rpc GetFeatureFlags(Empty) returns (GetFeatureFlagsResponse) {
    option (google.api.http) = {get: "/v1/featureflags"};
  }
}
